--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -5,11 +5,18 @@
     display: flex;
     flex-direction: column;
 }
+
 #main-tasks{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     height: 20%; 
+}
+#personal-tasks{
+    display: flex;
+    flex-direction: column;
+    
+    height: 50%; 
 }
 .tasks{
     background-color: rgb(216, 211, 211);
@@ -21,6 +28,9 @@
     margin: 0px 20px 0px 20px;
     padding: 5px 5px 5px 5px;
     transition: 0.5s;
+}
+#personal-tasks .tasks{
+    margin-top: 15px;
 }
 #home{
     font-size: 27px;
