--- a/src/pressets.css
+++ b/src/pressets.css
@@ -5,3 +5,6 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow-x: hidden;
 }
+main{
+    display: flex;
+}
