--- a/src/components/mainContent/loadMainContent.css
+++ b/src/components/mainContent/loadMainContent.css
@@ -1,14 +1,14 @@
 #main-content{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-evenly;
 }
 #title-add-container{
-    width: 100%;
-    height: 9vh;
+    width: 80%;
+    height: 100vh;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 }
 #type-selected-container{
     letter-spacing: 2px;
@@ -16,7 +16,8 @@
     font-size: 30px;
     color: rgb(216, 211, 211);
     background-color: #644324;
-    width: 80%;
+    width: 95%;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +28,7 @@
     margin-top: 25px;
     border-radius: 15px;
     background-color: rgb(216, 211, 211);
-    width: 150px;
+    width: 180px;
     border: none;
     color: #644324;
     overflow: hidden;
@@ -36,9 +37,51 @@
     align-items: center;
     justify-content: center;
     transition: 0.6s;
+    height: 82px;
 }
 #addTodo:hover{
-    background-color: #513317;
+    background-color: #644324;
     color: rgb(216, 211, 211);
     cursor: pointer;
+}
+.ToDo-container{
+    font-size: 18px;
+    height: 30px;
+    width: 90%;
+    background-color: rgb(216, 211, 211);
+    border-radius: 10px;
+    padding: 7px 10px 7px 10px;
+    margin-top: 20px;
+    color: #513317;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 900;
+    align-items: center;
+}
+.ToDo-container p{
+    position: relative;
+
+}
+#all-todos-container{
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#date-delete-checked-container{
+    display: flex;
+    align-items: center;
+}
+#date-delete-checked-container input{
+    width: 15px;
+    height: 15px;
+}
+#date-delete-checked-container *{
+    margin: 0px 4px 0px 4px;
+}
+#delete{
+    width: 16px;
+    height: 16px;
 }
