--- a/src/pressets.css
+++ b/src/pressets.css
@@ -2,7 +2,8 @@
 *{
     padding: 0;
     margin: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:"SFMono-Regular", Menlo, Consolas, "PT Mono", "Liberation Mono", Courier, monospace;
+    font-weight: 300;
     overflow-x: hidden;
 }
 main{
