--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,7 +1,7 @@
 #menu{
     background-color: rgb(230, 226, 226);
     height: 100vh;
-    width: 14vw;
+    width: 13vw;
     display: flex;
     flex-direction: column;
 }
@@ -15,7 +15,6 @@
 #personal-tasks{
     display: flex;
     flex-direction: column;
-    
     height: 50%; 
 }
 .tasks{
@@ -89,64 +88,10 @@
     color: rgb(216, 211, 211);
     cursor: pointer;
 }
-@media (max-width: 700px) {
-    #menu{
-        width: 40vw;
-    }
-    #home{
-        font-size: 15px;
-        width: 70%;
-        margin: 10px;
-    }
-    #add{
-        font-size: 15px;
-        margin-top: 5px;
-        margin-right: 5px;
-    }
-    #container-title{
-        display: flex;
-        flex-direction: column;
-    }
-    #projects-title{
-        margin: 10px;
-        font-size: 10px;
-    }
-    .tasks{
-        margin: 10px;
-    }
-    .tasks p{
-        font-size: 15px;
-        margin-left: 0px;
-    }
+#nav-container{
+ 
+    height: 100%;
 }
-@media (max-width: 1600px) {
-    #menu{
-        width: 20vw;
-    }
-    #home{
-        font-size: 25px;
-        width: 70%;
-        margin: 10px;
-    }
-    #add{
-        font-size: 20px;
-        margin-top: 5px;
-        margin-right: 5px;
-    }
-    #container-title{
-        display: flex;
-        
-    }
-    #projects-title{
-        margin: 0px;
-        font-size: 25px;
-    }
-    .tasks{
-        margin: 10px;
-    }
-    .tasks p{
-        font-size: 15px;
-        margin-left: 0px;
-    }
+#button-menu-slider{
+    width: 20px;
 }
-
