late toDo red date

--- a/src/components/mainContent/loadMainContent.css
+++ b/src/components/mainContent/loadMainContent.css
@@ -86,6 +86,10 @@
     display: flex;
     align-items: center;
 }
+.late{
+    color: red;
+}
+
 #date-delete-checked-container input{
     width: 15px;
     height: 15px;
