--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -35,6 +35,7 @@
     
 }
 #remove-button{
+    width: 10px;
     font-size: 13px;
     font-weight: bold;
     margin-right: 10px;
@@ -74,6 +75,7 @@
     display: flex;
 }
 #projects-title{
+    width: 100%;
     font-size: 27px;
     font-weight: bold;
     width: fit-content;
@@ -83,8 +85,8 @@
     align-items: center;
     display: flex;
    height: fit-content;
-    margin: 10px 20px 0px 20px;
-    padding: 5px 5px 5px 5px;
+    margin: 5px 15px 0px 15px;
+    padding: 5px;
 }
 #add{
     background-color: rgb(216, 211, 211);
@@ -138,13 +140,11 @@
         font-size:smaller
     }
     .tasks{
-        
         display: flex;
         flex-direction: row;
-        
     }
     .tasks p{
-        width: 20px;
+        width: 100%;
        
     }
 }
